# python-package-template

./: README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yaml
src/package_name/: __init__.py
tests/: conftest.py
tests/unit_tests/: 1_thing.py
