[metadata]
name = 
version = 0.1.0
author = 
author_email = 
description = 
keywords = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/<username>/<projectname>
project_urls =
    Bug Tracker = https://github.com/<username>/<projectname>/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pip # placeholder

[options.extras_require]
tests = pytest

[options.packages.find]
where = src